--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ form-action 'self';
 	<script>
 // === 1. Firebase 初始化 (必須放在最頂部) ===
 const firebaseConfig = {
-  apiKey: "AIzaSyBgwrgn2m343mRJb0WjzUhteiospegXhvI",
-  authDomain: "sansidata.firebaseapp.com",
-  projectId: "sansidata",
-  storageBucket: "sansidata.firebasestorage.app",
-  messagingSenderId: "580288358575",
-  appId: "1:580288358575:web:35dcf4e79bcef530de4c5a",
-  databaseURL: "https://sansidata-default-rtdb.firebaseio.com" 
+  apiKey: "AIzaSyAdRrg66oVGuhbk1zOpSm5K85DKcQlAOes",
+  authDomain: "login-system-2-b511c.firebaseapp.com",
+  projectId: "login-system-2-b511c",
+  storageBucket: "login-system-2-b511c.firebasestorage.app",
+  messagingSenderId: "352631619492",
+  appId: "1:352631619492:web:eccee85a46b2c2e3ddcb31",
+  databaseURL: "https://login-system-2-b511c-default-rtdb.firebaseio.com" 
 };
 
 // 宣告全域變數
